# rust-poseidon-bn254-pure

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md  sanity.hs
benches/: iterated_perm.rs
constants/: .gitignore
constants/circomlib/: circomlib_constants.hs  convert.hs
constants/haskell/: Circomlib.hs  Field.hs  HorizenLabs.hs  convert_circomlib.hs  convert_horizen.hs
constants/haskell/HorizenLabs/: New.hs  Old.hs
constants/haskell/Reference/: Poseidon2.hs
constants/poseidon2/: poseidon2_rust_params.sage
sanity/: sanity.hs
src/: bigint.rs  constant.rs  field.rs  lib.rs  montgomery.rs  platform.rs
src/bn254/: bigint.rs  constant.rs  euclid.rs  field.rs  mod.rs  montgomery.rs  platform.rs  traits.rs
src/bn254/platform/: mod.rs  portable.rs  unstable.rs
src/bn254/test/: bigint.rs  field.rs  mod.rs  properties.rs
src/poseidon/: mod.rs  permutation.rs
src/poseidon/constants/: mod.rs  t2.rs  t3.rs  t4.rs  t5.rs
src/poseidon2/: constants.rs  diag.rs  mds.rs  mod.rs  permutation.rs
src/poseidon2/constants/: mod.rs
src/poseidon2/constants/new/: mod.rs  t2.rs  t3.rs  t4.rs
src/poseidon2/constants/old/: t2.rs  t3.rs  t4.rs
