[package]
name    = "rust-poseidon-bn254-pure"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Balazs Komuves"]

default-run = "testmain"

[dependencies]
unroll = ">= 0.1.5"

[dev-dependencies]
criterion  = ">= 0.8"
quickcheck = "1"
quickcheck_macros = "1"

[lib]
bench = false

[profile.release]
debug = false 
# debug = true 

[[bin]]
name  = "testmain"
test  = false
bench = false

[[bin]]
name  = "twenty"
test  = false
bench = false

[[bench]]
name = "iterated_perm"
harness = false
